argocd-managed/misc/kube-apiserver-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kubernetes.oscarr.nl`)
      kind: Rule
      services:
        - name: kubernetes
          port: 443
          serversTransport: kubernetes
    - match: Host(`kubernetes.oscarr.nl`) && Path(`/`)
      kind: Rule
      middlewares:
        - name: kubernetes-redirect
      services:
        - name: noop@internal
          kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kubernetes-redirect
  namespace: default
spec:
  redirectRegex:
    regex: .*
    replacement: https://github.com/bierteam/uber-kubernetes#uber-kubernetes
