argocd-managed/misc/lab.yaml
---
kind: Endpoints
apiVersion: v1
metadata:
  name: docker02
subsets:
  - addresses:
      - ip: 192.168.122.227
    ports:
      - port: 443

---
kind: Service
apiVersion: v1
metadata:
  name: docker02
spec:
  clusterIP: None
  ports:
    - port: 443
      targetPort: 443

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docker02
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`oscarr.nl`, `0scar.nl`, `{subdomain:.*}.oscarr.nl`, `{subdomain:.*}.0scar.nl`)
      kind: Rule
      priority: 1
      services:
        - name: docker02
          port: 443
          passHostHeader: true
          serversTransport: insecure
    - match: Host(`hass.lab.oscarr.nl`)
      kind: Rule
      services:
        - name: docker02
          port: 443
          passHostHeader: true
          serversTransport: insecure
    - match: HostRegexp(`{subdomain:.*}.lab.oscarr.nl`)
      kind: Rule
      priority: 10
      middlewares:
        - name: proxy-oscarr
      services:
        - name: docker02
          port: 443
          passHostHeader: true
          serversTransport: insecure
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: proxy-oscarr
spec:
  forwardAuth:
    address: http://oauth2-proxy.proxy-oscarr
